--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <video id="main-antony-video" class="main-video" src="AntonyVideo.mp4" autoplay muted loop playsinline></video>
         </div>
         <div class="flex justify-center items-center mt-4">
-            <button id="toggle-audio-button" class="justify-center items-center mt-4 px-6 py-2 bg-red-600 text-white font-semibold rounded-lg shadow-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50">
+            <button id="toggle-audio-button" class="cursor-none justify-center items-center mt-4 px-6 py-2 bg-red-600 text-white font-semibold rounded-lg shadow-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50">
                 Włącz dźwięk
             </button>
         </div>
